--- a/contact-me/style.css
+++ b/contact-me/style.css
@@ -151,6 +151,9 @@ hr.rounded {
   .navbar-collapse ul li a{
     color:#0d6dfd;
   }
+  .navbar-collapse ul li a:hover{
+    color:#0d6dfd;
+  }
 }
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {
@@ -161,6 +164,9 @@ hr.rounded {
     background-color: none;
   }
   .navbar-collapse ul li a{
+    color:#0d6dfd;
+  }
+  .navbar-collapse ul li a:hover{
     color:#0d6dfd;
   }
 }
@@ -185,6 +191,9 @@ hr.rounded {
       background-color:#0d6dfd ;
     }
     .navbar-collapse ul li a{
+      color:white;
+    }
+    .navbar-collapse ul li a:hover{
       color:white;
     }
   }
