--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,14 @@
 
 body{
     max-width: 100%;
+    overflow-x: hidden;
 }
 
 section{
     width: 100%;
     max-width: 100%;
     height: 100vh;
+    overflow-x: hidden;
 
 }
 
@@ -15,10 +17,7 @@ a:link{
     text-decoration: none;
 }
 
-#landing .container{
-    position: absolute;
-    
-}
+
 
 .material-symbols-outlined {
     
@@ -245,7 +244,7 @@ button{
     }
 
     .bio-text{
-        font-size: 18px;
+        font-size: 16px;
     }
     .go-top-btn{
         
@@ -261,6 +260,12 @@ button{
     }
     #first-block-text{
         font-size:18px;
+        width: 90%;
+    }
+    section{
+        height:fit-content;
+        margin-bottom: 5%;
+        margin-top: 10%;
     }
 }
 /* Small devices (landscape phones, 576px and up)*/
@@ -268,9 +273,8 @@ button{
    
 
     .first-block{
-        bottom: 5%;
-        left: 50%;
-        transform: translate(-50%, -40%);
+        position: static;
+        
     }
     .my-image-2{
         width: 200px;
@@ -279,12 +283,26 @@ button{
         object-position:30%;
         border-radius: 50%;
     }
+    section{
+        height:fit-content;
+        margin-bottom: 4%;
+        margin-top: 10%;
+    }
+    #first-block-text{
+        font-size:18px;
+        width: 90%;
+    }
     
     
 }
 
 /* Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
+    #first-block-text{
+        font-size:18px;
+        width: 75%;
+    }
+
     .first-block{
         bottom: 5%;
         left: 50%;
@@ -300,6 +318,15 @@ button{
         object-fit: cover;
         object-position:30%;
         border-radius: 50%;
+    }
+    section{
+        height:100vh;
+        margin-bottom: 0%;
+        margin-top: 0%;
+    }
+    #landing .container{
+        position: absolute;
+        
     }
     
 }
